Closed Bug 138007 Opened 23 years ago Closed 23 years ago

[trunk] New Profile window blank, can't create a new Profile

Categories

(SeaMonkey :: Startup & Profiles, defect)

defect
Not set
blocker

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: esther, Assigned: jst)

References

Details

(Keywords: smoketest)

Attachments

(2 files, 1 obsolete file)

Using the linux trunk build 2002-04-17-07trunk. This will prevent me from testing some priority bugs requiring a new profile. 1. Launch so Profile Manager comes up 2. Select Manange Profiles, click on New Profile Result: Blank window with buttons, buttons don't work Expected: to be able to create a new profile
Component: Profile Migration → Profile Manager FrontEnd
*** Bug 138005 has been marked as a duplicate of this bug. ***
Same problem for the mac osx build
profile manager is working fine with branch builds for osx 2002-04-17-05-1.0.0 and linux 2002-04-17-09-1.0.0 this should be a smoketest blocker for trunk
per bhuvan changing assigned to ben
Assignee: racham → ben
*** Bug 138004 has been marked as a duplicate of this bug. ***
blocks Activation testing on trunk builds
Keywords: smoketest
OS: Linux → All
Hardware: PC → All
the first set of trunk builds this morning, are obviously terrible. Please check this behavior again, with the result of the respin. - the sheriff
I think ben is generally not around, I suggest a new owner here. syd?
Whiteboard: Need to re-test with new bits
Has anyone even tried to contact Ben?
This is still a smoketest stopper with builds late 4-17 and window early build 4-18. Can't test priority bugs on trunk that require a New Profile.
We tested with new bits as stated in whiteboard, still a bug.
It's been re-tested. Removing status whiteboard message.
Whiteboard: Need to re-test with new bits
could this be jst's checkin? doesn't the create profile wizard UI live in an iframe? I'll see if backing him out fixes it.
Seeing debug output: Error reading file jar:resource:///chrome/classic.jar!/skin/classic/global/scroll-left.gif Error reading file jar:resource:///chrome/classic.jar!/skin/classic/global/scroll-right.gif When opening the create profile window. Plenty of general FE changes were checked in, but none jump out as obvious candidates for this.
Summary: New Profile window blank, can't create a new Profile → [trunk] New Profile window blank, can't create a new Profile
bienvenu is going to try backing out jst.
backing out jst's checkin fixes this one as well. Dougt is trying to get hold of jst - if he can't, I think we're just going to have to back him out.
jst says he'll look at this.
Assignee: ben → jst
WFM with a Linux pull from about 35 hours ago (Wednesday 1:00AM), the pull *definitely* has JST's changes (verified in code). Updating again now. Could be an interaction with something that occurred later.
For the ones that fail, is the Classic theme installed? Could this be related to bug 13058 Can't launch browser when Classic Skin is not installed
classic skin is installed
I am using modern, I just reproduced. I was following the wrong steps before. I get this warning when I click Next on a debug build: Error: Missing an entry in the wizard map for null
Attached patch Proposed fix (obsolete) — Splinter Review
Attached patch Patch v1.1Splinter Review
This makes it so we don't LoadSrc twice when .src is set. Tested against .src.
Attachment #79853 - Attachment is obsolete: true
Comment on attachment 79861 [details] [diff] [review] Patch v1.1 r=bryner
Attachment #79861 - Flags: review+
Fix checked in.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Comment on attachment 79871 [details] [diff] [review] Aditional change that makes us not call LoadSrc() more than once when a frame exists for an iframe element r=jkeiser
Attachment #79871 - Flags: review+
Comment on attachment 79871 [details] [diff] [review] Aditional change that makes us not call LoadSrc() more than once when a frame exists for an iframe element sr=heikki
Attachment #79871 - Flags: superreview+
Blocks: 52334
trunk build 2002041814 on linux this is fixed. trunk build 2002041814 on winme this is fixed. leaving other platforms for tracy or k'trina to verify.
verified with commercial trunk builds: win 2002-04-24-06-trunk mac os9 2002-04-24-03-trunk
Status: RESOLVED → VERIFIED
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: