Make iframe load when setAttribute("src") happens on it (blocker bug 138007), JST's patch +some, r=bryner@netscape.com, sr=heikki@netscape.com